Finih FirstActivity, And SecondActivity, Fix deprecated issue

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="selected_user">Selected User Name</string>
     <string name="username">Username</string>
     <string name="choose_user">Choose a User</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="email">Email</string>
 </resources>
